# Hybrid-token-efficient-routing-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  pyproject.toml  render.yaml
docs/: DEPLOY.md
docs/submission/: checklist.md  cover-image.html  demo-prompts.md  lablab-form.md  slides.html  video-script.md
scripts/: entrypoint.sh
src/routing_agent/: __init__.py  cli.py  config.py  runtime.py  submission.py  types.py
src/routing_agent/budget/: __init__.py  tracker.py
src/routing_agent/cache/: __init__.py  embeddings.py  store.py
src/routing_agent/clients/: __init__.py  base.py  local.py  remote.py
src/routing_agent/eval/: __init__.py  harness.py  scorers.py  sweep.py
src/routing_agent/router/: __init__.py  adaptive.py  classifier.py  compression.py  confidence.py  decomposer.py  ladder.py  learned.py  toolsolve.py  verifier.py
src/routing_agent/web/: __init__.py  app.py
src/routing_agent/web/static/: index.html
tasks/: sample_tasks.jsonl
tests/: conftest.py  test_budget.py  test_cache.py  test_classifier.py  test_clients.py  test_config.py  test_decomposer.py  test_eval.py  test_ladder.py  test_learned.py  test_router_units.py  test_submission.py  test_toolsolve.py  test_types.py  test_verifier.py  test_web.py
