[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "routing-agent"
version = "0.1.0"
description = "Hybrid token-efficient routing agent: local Gemma first, Fireworks AI only when needed"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.2.90"]
cache = ["fastembed>=0.3"]
learned = ["scikit-learn>=1.5", "joblib>=1.4"]
web = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]
all = ["routing-agent[local,cache,learned,web]"]

[project.scripts]
routing-agent = "routing_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"routing_agent.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
